package ucf.assignments;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Daniel Guzman
 */

public class Load {

    //function to load To Do List
    public static void load(){
        /*Create File Reader
          Create Array list
          Read information from file into array list
          Call on add function to create new To Do List
          Put respective information from array list in the new To Do List
        */
    }

}
