package ucf.assignments;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Daniel Guzman
 */

import javafx.fxml.FXML;


public class ToDoController {
    //Button to add To Do List
    @FXML
    protected void onAddButtonClick(){
        //create Titled Pain within the Accordion
        //call on add class
    }

    //Button to remove To Do List
    @FXML
    protected void onRemoveButtonClick(){
        //prompt user for list name
        //call on remove class remove function
    }

    //Button to save all To Do lists
    @FXML
    protected void onSaveAllButtonClick(){
        //call on save class
    }

    //Button to load in To Do List
    @FXML
    protected void onLoadButtonClick(){
        //call on load class
    }

    //Button to add an item within To Do List
    @FXML
    protected void onToDoListAddButtonClick(){
        //call ToDoList class add function
    }

    //Button to remove an item within To Do List
    @FXML
    protected void onToDoListRemoveButtonClick(){
        //call ToDoList class remove function
    }

    //Button to edit title of To Do List
    @FXML
    protected void onToDoListEditTitleButtonClick(){
        //call ToDoList class edit title function
    }

    //Button to edit the date of an item within To Do List
    @FXML
    protected void onToDoListEditDateButtonClick(){
        //call ToDoList class edit date function
    }

    //Button to edit the description of an item within To Do List
    @FXML
    protected void onToDoListEditDescriptionButtonClick(){
        //call ToDoList class edit description function
    }

    //Button to save To Do List
    @FXML
    protected void onToDoListSaveButtonClick(){
        //call ToDoList class save function
    }

    //Button to display completed items within To Do List
    @FXML
    protected void onToDoListCompletedButtonClick(){
        //call ToDoList class display completed function
    }

    //Button to display the incomplete items within To Do List
    @FXML
    protected void onToDoListInCompleteButtonClick(){
        //call ToDoList class display incomplete function
    }
}
