package ucf.assignments;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Daniel Guzman
 */

public class ToDoList {

    //function to add an item into To Do List
    public static void add(){
        /*
        Create 4 separate text boxes within To Do List
            -Item
            -Item Description
            -Item Date
            -Completed or Incomplete
        */
    }

    //function to remove an item from To Do List
    public static void remove(){
        /*
        Prompt user for name of item
        loop through items until specific item is found
        remove item and the following:
            -Item Description
            -Item Date
            -Completed or Incomplete check box
        */
    }

    //function to edit description of item from To Do List
    public static void editDescription(){
        /*
        Prompt user for the new description of item
        Overwrite the old description with new description
        */
    }

    //function to edit date of item from To Do List
    public static void editDate(){
        /*
        Prompt user for the new date of item
        Overwrite the old date with new date
        */
    }

    //function to edit title of item from To Do List
    public static void editTitle(){
        /*
        Prompt user for new title of To Do List
        Overwrite old title with new title
        */
    }

    //function to save To Do List
    public static void save(){
        /*
        Create new file
        Create file writer
        write all information from To Do List into new file
        */
    }

    //function to display completed items within To Do List
    public static void displayComplete(){
        /*
        loop through items for completed items
        display completed items
        */
    }

    //function to display incomplete items within To Do List
    public static void displayIncomplete(){
        /*
        loop through items for incomplete items
        display incomplete items
        */
    }
}
